<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.red.minecraft</groupId>
    <artifactId>uw</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>UndefinedWorldPlugin</name>

    <modules>
        <module>core</module>
        <module>item</module>
        <module>mob</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.target>25</maven.compiler.target>
        <maven.compiler.source>25</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <papermc-api.version>26.1.2.build.66-stable</papermc-api.version>
        <dellarte-api.version>3.1-SNAPSHOT</dellarte-api.version>
        <uw.version>1.0-SNAPSHOT</uw.version>
    </properties>

    <build>
        <finalName>${project.name} ${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <skip>false</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>maven-snapshots</id>
            <url>https://nexus.redkiller.org/repository/maven-snapshots/</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>nexomc-releases</id>
            <name>Reposilite Repository</name>
            <url>https://repo.nexomc.com/releases</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>nexus</id>
            <name>Lumine Releases</name>
            <url>https://mvn.lumine.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>reposilite-repository-snapshots</id>
            <name>Reposilite Repository</name>
            <url>https://repo.triumphteam.dev/snapshots</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>20.1.0</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>io.papermc.paper</groupId>
                <artifactId>paper-api</artifactId>
                <version>${papermc-api.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.red.minecraft.dellarte</groupId>
                <artifactId>library</artifactId>
                <version>3.1-SNAPSHOT</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>